...
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:layout_marginTop="24dp"
            android:inputType="textPassword"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:nextFocusDown="@id/btnLoginFrag"
            app:hasClearButton="true"
            app:iconSignifier="@drawable/ic_institue_key"
            app:labelText="@string/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/boxes_institute_name"
            app:panelBackgroundColor="@color/code_edit_text_background"
            app:primaryColor="@color/code_edit_text_bottom_line"
            app:secondaryColor="@color/outwait_color_dark">

            <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                android:id="@+id/etInstitutePassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:nextFocusDown="@id/boxes_institute_name"
                android:password="true"
...
            app:layout_constraintTop_toBottomOf="@+id/tvTitleLogin"
            app:panelBackgroundColor="@color/code_edit_text_background"
            app:primaryColor="@color/code_edit_text_bottom_line"
            app:secondaryColor="@color/outwait_color_dark">

            <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                android:id="@+id/etInstituteName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:nextFocusDown="@id/btnLoginFrag"
                android:singleLine="true"
...
