...
                app:layout_constraintVertical_bias="0.0"
                app:timeUnits="hhmm">

            </mobi.upod.timedurationpicker.TimeDurationPicker>

            <android.widget.Button
                android:id="@+id/btnLogout"
                style="@style/DefaultButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:onClick="@{()->viewModel.logout()}"
...
