...
        <variable
            name="viewModel"
            type="edu.kit.outwait.recyclerviewScreens.managementViewScreen.ManagementViewViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/managementViewContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".recyclerviewScreens.managementViewScreen.ManagementViewFragment">


        <androidx.recyclerview.widget.RecyclerView
...
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/outwait_color"
            android:clickable="true"
...
